--- a/part_6/styles.css
+++ b/part_6/styles.css
@@ -1,6 +1,33 @@
 body {
   font-family: "Computer Modern Serif";
   font-size: 16pt;
+  width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  <!--text-align: center;>
+}
+
+.subheading{
+  font-family: "Computer Modern Serif";
+  border-top: solid;
+  border-bottom: thin double;
+}
+
+.center{
+  text-align:center;
+}
+
+footer{
+  text-align: right;
+}
+
+h2 small {
+  font-size: medium;
+  font-style: italic;
+}
+
+h1 {
+  text-align: center;
 }
 
 
