part 6 almost done

--- a/part_6/styles.css
+++ b/part_6/styles.css
@@ -7,6 +7,11 @@ body {
   <!--text-align: center;>
 }
 
+a{
+text-decoration: none;
+color: blue;
+}
+
 .subheading{
   font-family: "Computer Modern Serif";
   border-top: solid;
@@ -30,6 +35,37 @@ h1 {
   text-align: center;
 }
 
+th{
+  background: black;
+  color: white;
+}
+
+.odd_week{
+background-color: lavender;
+}
+
+.schedule{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.week{
+  text-transform: uppercase;
+  border-color: gray;
+  border-style: thin double;
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+}
+
+table, td
+{
+border: solid gray;
+border-collapse:collapse;
+}
+
+tr{
+  border-style: solid;
+  border-color: gray;
+}
 
 /* ----------------------------------------------------------------- */
 /* The scary stuff below is just to get the right font loaded up.    */
