--- a/part_7/styles.css
+++ b/part_7/styles.css
@@ -19,6 +19,11 @@
 	float: left;
 }
 
+.link{
+	background-color: blue;
+  	color: white;
+  	text-decoration: none;
+}
 .two_columns{
 	width: 66%;
 	float: left;
@@ -28,3 +33,4 @@
 	width: 25%;
 	float: left;
 }
+
